# ecoguard

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AST_INTEGRATION_COMPLETED.md  AST_INTEGRATION_PROPOSAL.md  Makefile  PHASE_1_STAGE_2_COMPLETE.md  PIPELINE_STATUS_REPORT.md  PUBLISHING_SETUP_COMPLETE.md  ReadMe.md  STAGE_2_COMPLETE.md  STAGE_3_COMPLETION_SUMMARY.md  prepushcommands.md  pyproject.toml  pyproject.toml.backup  test-results.json  test_sample.py  tox.ini
.github/workflows/: ci.yml
examples/: basic_usage.py
scripts/: manage-version.sh  setup_dev.py  version.py
src/ecoguard_ai/: __init__.py  __main__.py
src/ecoguard_ai/analyzers/: __init__.py  base.py
src/ecoguard_ai/analyzers/ai_code/: __init__.py
src/ecoguard_ai/analyzers/green/: __init__.py
src/ecoguard_ai/analyzers/quality/: __init__.py
src/ecoguard_ai/analyzers/security/: __init__.py
src/ecoguard_ai/cli/: __init__.py
src/ecoguard_ai/core/: __init__.py  analyzer.py  issue.py  result.py
tests/: conftest.py
tests/unit/: test_analyzers_base.py  test_analyzers_quality.py  test_cli.py  test_core_analyzer.py  test_core_issue.py  test_core_result.py
